--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -40,7 +40,7 @@
 </div>
     
 <div class="top_page_header" >
-	<h4> <i class="fa fa-users" aria-hidden="true"></i> Profile Data Management </h4>
+	<h4> <i class="fa fa-address-card-o" aria-hidden="true"></i> Profile Data Management </h4>
 </div>
 
 <div id="profile_list_loader" class="loader"></div>
