--- a/resources/app-templates/target-media/short-link-click.html
+++ b/resources/app-templates/target-media/short-link-click.html
@@ -150,6 +150,7 @@
 			eventData['adId'] = "{{{customData.adId}}}";
 			eventData['placementId'] = "{{{customData.placementId}}}";
 			eventData['campaignId'] = "{{{customData.campaignId}}}";
+			eventData['affiliateId'] = "{{{customData.affiliateId}}}";
 			eventData['newsletterSubscription'] = newsletterSubscription;
 			LeoObserverProxy.recordActionEvent("short-link-click", eventData);
 		}
