improve system, prepare white label version

--- a/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
@@ -78,13 +78,13 @@ div.botui-actions-buttons {
 </div>
 
 <script id="tpl_leocdp_documents" type="text/x-handlebars-template">
-<i class="fa fa-info-circle" aria-hidden="true"></i> Some documents that you can learn more about LEO CDP <br>
+<i class="fa fa-info-circle" aria-hidden="true"></i> Some documents that you can learn more about CDP <br>
 <ul >
 <li>
 	<a href="https://knowledge.leocdp.net/p/what-is-uspa-framework.html"> <i class="fa fa-book" aria-hidden="true"></i> Introduction to USPA framework</a>
 </li>
 <li>
-	<a href="https://knowledge.leocdp.net/p/introduction-to-leo-cdp-101.html"> <i class="fa fa-book" aria-hidden="true"></i> Introduction to LEO CDP </a>
+	<a href="https://knowledge.leocdp.net/p/introduction-to-leo-cdp-101.html"> <i class="fa fa-book" aria-hidden="true"></i> Introduction to CDP </a>
 </li>
 <li>
 	<a href="https://knowledge.leocdp.net/p/how-to-do-customer-analytics.html"> <i class="fa fa-book" aria-hidden="true"></i> How to do Customer Analytics </a>
