--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -42,7 +42,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=100"/>
 	
 	<title> {{pageTitle}} </title>
-	<meta name="description" content="LEO CDP Admin"/>
+	<meta name="description" content="CDP Admin"/>
 	<meta name="robots" content="noindex">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">	
