--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -289,7 +289,7 @@
 
 	function mainViewReady() {
 		if (isMobileDevice()) {
-			var msg ='<div class="alert alert-info"> <strong> The LEO CDP Admin </strong> is currently not supported on mobile browsers! </div>';
+			var msg ='<div class="alert alert-info"> <strong> The CDP Admin </strong> is currently not supported on mobile browsers! </div>';
 			$('#page-main-notification').show().html(msg);
 		} else {
 			$('#uspa_logo').click(function(){ window.open('https://uspa.tech','_blank') });
