--- a/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
@@ -473,7 +473,7 @@
     
     function exportDataCxSurvey(){
 		// noti
-		iziToast.info({ timeout : 2000, message: 'LEO CDP is processing to export data of the survey' });
+		iziToast.info({ timeout : 2000, message: 'The system is processing to export data of the survey' });
 		
 		var dateFilter = getDateFilterValues();
 		var requestParams = {};
