--- a/resources/app-templates/leocdp-admin/modules/asset/post-item-info.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/post-item-info.html
@@ -91,7 +91,7 @@
         			}
                 	
                     postModel = json.data;
-                    document.title = 'LEO CDP - Content Post: ' + postModel.title;
+                    document.title = 'CDP - Content Post: ' + postModel.title;
                     $('#post_info_title').text(postModel.title)
 
                     var groupId = postModel.groupIds[0] || '';
