--- a/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
@@ -80,20 +80,20 @@
 							  <label><input type="radio" name="type" value="4" > Behavioral segmentation </label>
 							</div>
 							
-							<div class="radio" title="Psychographic segmentation (This feature is only on LEO CDP Enterprise version)"  >
+							<div class="radio" title="Psychographic segmentation (This feature is only on CDP Enterprise version)"  >
 							  <label class="input_disabled" ><input type="radio" name="type" value="3" disabled="disabled" > Psychographic segmentation </label>
 							</div>
-							<div class="radio" title="Re-marketing segmentation (This feature is only on LEO CDP Enterprise version)" >
+							<div class="radio" title="Re-marketing segmentation (This feature is only on CDP Enterprise version)" >
 							  <label class="input_disabled"><input type="radio" name="type" value="5" disabled="disabled" > Re-marketing segmentation </label>
 							</div>
-							<div class="radio" title="Look-alike segmentation (This feature is only on LEO CDP Enterprise version)" >
+							<div class="radio" title="Look-alike segmentation (This feature is only on CDP Enterprise version)" >
 							  <label class="input_disabled"><input type="radio" name="type" value="6" disabled="disabled" > Look-alike segmentation </label>
 							</div>
 							
-							<div class="radio" title="RFM model segmentation (This feature is only on LEO CDP Enterprise version)" >
+							<div class="radio" title="RFM model segmentation (This feature is only on CDP Enterprise version)" >
 							  <label class="input_disabled"><input type="radio" name="type" value="7" disabled="disabled" > RFM model segmentation </label>
 							</div>
-							<div class="radio" title="Churn segmentation (This feature is only on LEO CDP Enterprise version)" >
+							<div class="radio" title="Churn segmentation (This feature is only on CDP Enterprise version)" >
 							  <label class="input_disabled"><input type="radio" name="type" value="8" disabled="disabled" > Churn segmentation </label>
 							</div>
 						</div>
@@ -139,7 +139,7 @@
 							<div class="col-sm-9">
 								<div class="checkbox">
 									<label><input type="checkbox" id="sm_for3rdSynchronization" name="for3rdSynchronization"> To set-up the data connection API and ongoing process of synchronizing data
-										 from LEO CDP to digital marketing platforms
+										 from CDP to digital marketing platforms
 									</label>
 								</div>
 							</div>
