--- a/resources/app-templates/leocdp-admin/setup.html
+++ b/resources/app-templates/leocdp-admin/setup.html
@@ -14,7 +14,7 @@
                 <div>
                     <fieldset>
                         <div id="legend">
-                            <h1>LEO CDP - Setup New System</h1>
+                            <h1>Setup New CDP</h1>
                         </div>
 						<hr>
 						<div class="alert alert-info" role="alert">Please enter the superadmin password and click OK button</div>
