--- a/resources/app-templates/web-form/template-survey-form.html
+++ b/resources/app-templates/web-form/template-survey-form.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>{{pageTitle}}</title>
-	<meta name="keywords" content="LEO CDP Survey, LEO CX Feedback Form"/>
-	<meta name="description" content="LEO CDP Survey and CX Feedback Form"/>
+	<meta name="keywords" content="CDP Survey, LEO CX Feedback Form"/>
+	<meta name="description" content="CDP Survey and CX Feedback Form"/>
 	<meta name="copyright" content="LeoCDP.com"/>
 	<meta name="author" content="Trieu Nguyen - trieu@leocdp.com"/>
 	
