--- a/resources/content-templates/email-product-recommendation.html
+++ b/resources/content-templates/email-product-recommendation.html
@@ -370,7 +370,7 @@
                             </tr>
                           </tbody>
                         </table>
-                        <p>This is a demo email from LEO CDP</p>
+                        <p>This is a demo email from CDP</p>
                         <p>Thank you.</p>
                       </td>
                     </tr>
@@ -393,7 +393,7 @@
                 </tr>
                 <tr>
                   <td class="content-block powered-by">
-                    Powered by <a href="https://leocdp.net">LEO CDP</a>.
+                    Powered by <a href="#">CDP</a>.
                   </td>
                 </tr>
               </table>
