--- a/resources/content-templates/email-thanks-for-submit-info.html
+++ b/resources/content-templates/email-thanks-for-submit-info.html
@@ -374,7 +374,7 @@
                 </tr>
                 <tr>
                   <td class="content-block powered-by">
-                    Powered by <a href="https://leocdp.net">LEO CDP</a>.
+                    Powered by <a href="https://leocdp.net">CDP</a>.
                   </td>
                 </tr>
               </table>
