--- a/resources/content-templates/introduction-to-leocdp.html
+++ b/resources/content-templates/introduction-to-leocdp.html
@@ -3,8 +3,8 @@
 </a>
 
 <br><br><br>
-<div style="clear: both; text-align: left;">LEO CDP is the Customer Data Platform for on-premises deployments, is developed by USPA Technology Company.</div>
-<div style="clear: both; text-align: left;"><b><i><span style="font-size: medium;">There are 5 main functions of LEO CDP</span></i></b></div>
+<div style="clear: both; text-align: left;">D-CDP is the Customer Data Platform for on-premises deployments.</div>
+<div style="clear: both; text-align: left;"><b><i><span style="font-size: medium;">There are 5 main functions of D-CDP</span></i></b></div>
 <div style="clear: both; text-align: left;">
    <ol style="text-align: left;">
       <li>Provide a customer analytics solution for data-driven organizations</li>
