--- a/resources/app-templates/leocdp-admin/modules/activation/data-service-list.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/data-service-list.html
@@ -39,15 +39,18 @@
 	    <div class="panel-body">
 	      	<div class="col-lg-12 row">
 	      		<div class="col-lg-8" >
-					<input id="filter_data_services_keywords" type="text" placeholder="Enter keywords to search data services" autocomplete="off">				
-					<label for="select_filter_data_services" style="margin-top:10px;" >Status</label>
-					<select class="form-control" id="select_filter_data_services" >
-				    	<option value="all"> All activation services</option>
-				    	<option value="active"> Active activation services </option>
-				    	<option value="active_for_personalization" title="filter only active data services for data personalization" > Active activation services for data personalization</option>
-				    	<option value="active_for_enrichment" title="filter only active data services for data enrichment"> Active activation services for data enrichment</option>
-				    	<option value="active_for_synchronization" title="filter only active data services for data synchronization"> Active activation services for data synchronization</option>
-				    </select>
+	      			<div class="col-md-7" >
+						<input id="filter_data_services_keywords" type="text" placeholder="Enter keywords to filter by name" autocomplete="off">		
+					</div>	
+					<div class="col-md-5" >	
+						<select class="form-control" id="select_filter_data_services" >
+					    	<option value="all"> Show all activation services</option>
+					    	<option value="active"> Show only active services </option>
+					    	<option value="active_for_personalization" title="filter only active data services for data personalization" > Show active services for personalization</option>
+					    	<option value="active_for_enrichment" title="filter only active data services for data enrichment"> Show active  services for data enrichment</option>
+					    	<option value="active_for_synchronization" title="filter only active data services for data synchronization"> Show active services for synchronization</option>
+					    </select>
+				    </div>
 				</div>
 				<div class="col-lg-4">
 					<div class="col-md-6 text-center" >
@@ -77,7 +80,7 @@
 <div class="data_service_box col-lg-4">
   <div class="panel panel-default" id="data_service_box_<%- id %>">
 	<div class="panel-heading"   > 
-		<b id="header_<%- id %>" > 
+		<b id="service_box_header_<%- id %>" > 
 			<i class="fa fa-exchange " aria-hidden="true"></i> <span style="font-size:13px"> <%- name %> </span> 
 		</b>
 		<i class="fa fa-question-circle config_description" aria-hidden="true" style="float:right" title="<%- description %>" ></i>
