--- a/resources/app-templates/leocdp-admin/modules/customer/business-account-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/business-account-info.html
@@ -296,7 +296,7 @@
 		var buttonSelector =  "#btn_account_json_url";
 		
 		var generatingUrl = function(){
-			iziToast.info({ timeout : 2000, message: 'LEO CDP is processing data for the account "'+accountDataModel.name +'"' });
+			iziToast.info({ timeout : 2000, message: 'CDP is processing data for the account "'+accountDataModel.name +'"' });
 			
 			var paramObj = { 'accountId': accountDataModel.id };
 	        var url = window.baseLeoAdminUrl + '/cdp/account/export-json';
@@ -330,7 +330,7 @@
 		var buttonSelector =  "#btn_account_csv_url";
 		
 		var generatingUrl = function(){
-			iziToast.info({ timeout : 2000, message: 'LEO CDP is processing data for the account "'+accountDataModel.name +'"' });
+			iziToast.info({ timeout : 2000, message: 'CDP is processing data for the account "'+accountDataModel.name +'"' });
 			
 			var paramObj = { 'accountId': accountDataModel.id, 'csvType': 0 };
 	        var url = window.baseLeoAdminUrl + '/cdp/account/export-csv';
@@ -375,7 +375,7 @@
 		
 		var generatingUrl = function(){
 			// noti
-			iziToast.info({ timeout : 2000, message: 'LEO CDP is processing data for the account "'+accountDataModel.name +'"' });
+			iziToast.info({ timeout : 2000, message: 'CDP is processing data for the account "'+accountDataModel.name +'"' });
 			var paramObj = { 'accountId': accountDataModel.id, 'csvType': csvType };
 	        var url = window.baseLeoAdminUrl + '/cdp/account/export-csv';
 	        LeoAdminApiUtil.getSecuredData(url, paramObj, function (json) {
