--- a/resources/app-templates/leocdp-admin/modules/knowledge/self-learning-courses.html
+++ b/resources/app-templates/leocdp-admin/modules/knowledge/self-learning-courses.html
@@ -11,7 +11,7 @@
     <div class="row gridholder">
         <div class="col-lg-12">
             <div class="table-responsive">
-                <h3>Self-Learning LEO CDP courses: This function is under development and is not yet available</h3>
+                <h3>Self-Learning CDP courses: This function is under development and is not yet available</h3>
                 
             </div>
             <div class="embed-responsive embed-responsive-16by9">
