--- a/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
@@ -84,13 +84,7 @@ div.botui-actions-buttons {
 	<a href="https://knowledge.leocdp.net/p/what-is-uspa-framework.html"> <i class="fa fa-book" aria-hidden="true"></i> Introduction to USPA framework</a>
 </li>
 <li>
-	<a href="https://knowledge.leocdp.net/p/introduction-to-leo-cdp-101.html"> <i class="fa fa-book" aria-hidden="true"></i> Introduction to CDP </a>
-</li>
-<li>
-	<a href="https://knowledge.leocdp.net/p/how-to-do-customer-analytics.html"> <i class="fa fa-book" aria-hidden="true"></i> How to do Customer Analytics </a>
-</li>
-<li>
-	<a href="https://knowledge.leocdp.net/p/how-to-design-customer-journey.html"> <i class="fa fa-book" aria-hidden="true"></i> How to design customer journey</a>
+	<a href="https://knowledge.leocdp.net/p/introduction-to-leo-cdp-101.html"> <i class="fa fa-book" aria-hidden="true"></i> Introduction to LEO CDP framework </a>
 </li>
 </ul>
 </script>
