--- a/resources/app-templates/leocdp-admin/modules/activation/campaign-list.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/campaign-list.html
@@ -231,6 +231,6 @@
     }
     
     var campaignListRefresh = campaignListRefresh || function(){
-    	console.log('campaignListRefresh '+id)
+    	location.hash  = "#calljs-leoCdpRouter('Automated_Campaigns','_refresh_"+new Date().getTime()+"')";	
     }
 </script>
