--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -9,17 +9,20 @@
 		</button>
 
 		<a class="navbar-brand" href="/">
-			<img id="logo-img" src="" alt="MainLogo" style="display: none;" />
+			<img id="logo-img" src="" alt="MainLogo" style="display: none;" title="CDP" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Your Customer Data Platform for Smart Business" />
 		</a>
 
 		<div style="width: 100%;">
-			<input id="main_search_profile" type="text" placeholder="Enter name, email or phone number to search customer profiles" autocomplete="off" >
+			<input id="main_search_profile" type="text" placeholder="Enter name, email or phone number to search customer profiles" autocomplete="off" 
+				title="Profile Search" data-container="body" data-toggle="popover" data-placement="bottom" data-content="You can enter name, email or phone number to search customer profiles" >
 		</div>
 
 		<!-- Top User Menu -->
 		<ul class="nav navbar-right top-nav">
 			<li>				 
-				<a href="javascript: initLeoChatBot('global')"> <i class="fa fa-commenting-o"></i> LEO Chatbot </a> 
+				<a href="javascript: initLeoChatBot('global')" title="LEO Chatbot" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Your personal AI assistant on the CDP"  > 
+					<i class="fa fa-commenting-o"></i> LEO Chatbot 
+				</a> 
 			</li>
 			<li class="dropdown" style="min-width:168px!important;">
 				<a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">
@@ -52,15 +55,18 @@
 				</a>
 				<ul id="analytics_hub_menu" class="collapse in" aria-expanded="true">
 					<li id="Customer_Data_Report_Menu" >
-						<a id="Customer_Data_Report" href="#calljs-leoCdpRouter('Customer_Data_Report')" title="Customer Data Report" > 
+						<a id="Customer_Data_Report" href="#calljs-leoCdpRouter('Customer_Data_Report')" 
+							title="Customer Data Report" data-container="body" data-toggle="popover" data-placement="right" data-content="Show reports about profile funnel, profile journey, touchpoint and data journey map" > 
 							<i class="fa fa-fw fa-filter"></i> Customer Report </a>
 					</li>
 					<li>
-						<a id="Event_Data_Report" href="#calljs-leoCdpRouter('Event_Data_Report')" title="Event Data Report" > 
+						<a id="Event_Data_Report" href="#calljs-leoCdpRouter('Event_Data_Report')" 
+							title="Event Data Report" data-container="body" data-toggle="popover" data-placement="right" data-content="Show reports about event data stream and event matrix" > 
 							<i class="fa fa-fw fa-line-chart"></i> Event Data Report </a>
 					</li>
 					<li>
-						<a id="CX_Data_Report" href="#calljs-leoCdpRouter('CX_Data_Report')" title="CX Data Report"  > 
+						<a id="CX_Data_Report" href="#calljs-leoCdpRouter('CX_Data_Report')" 
+							title="CX Data Report" data-container="body" data-toggle="popover" data-placement="right" data-content="Show customer experience reports: product/service rating and feedback survey" > 
 							<i class="fa fa-fw fa-tachometer"></i> CX Data Report </a>
 					</li>
 				</ul>
@@ -73,11 +79,13 @@
 				</a>
 				<ul id="journey_hub_menu" class="collapse in" aria-expanded="true">			
 					<li style="display: none;" data-system-user-roles="5">
-						<a id="Data_Journey_Map" href="#calljs-leoCdpRouter('Data_Journey_Map','id_default_journey')" title="Data Journey Map Management"> 
+						<a id="Data_Journey_Map" href="#calljs-leoCdpRouter('Data_Journey_Map','id_default_journey')" 
+							title="Data Journey Map Management" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer data journey maps and touchpoint data hubs" > 
 							<i class="fa fa-fw fa-map-o"></i> Data Journey Map </a>
 					</li>
 					<li id="Event_Data_Funnel_Menu"  >
-						<a id="Event_Data_Funnel" href="#calljs-leoCdpRouter('Event_Data_Funnel')" title="Event Data Funnel Management" >
+						<a id="Event_Data_Funnel" href="#calljs-leoCdpRouter('Event_Data_Funnel')" 
+							title="Event Data Funnel Management" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all event data metrics for customer analytics" >
 							<i class="fa fa-fw fa-filter"></i> Event Data Metrics </a>
 					</li>
 				</ul>
@@ -90,15 +98,18 @@
 				</a>
 				<ul id="customer_hub_menu" class="collapse in" aria-expanded="true">
 					<li id="Community_Management_Menu" style="display: none">
-						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" title="All Customer Profiles" > 
-							<i class="fa fa-fw fa-users"></i> Customer Community </a>
+						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" 
+							title="All Customer Communities" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer communities" > 
+							<i class="fa fa-fw fa-users"></i> Customer Communities </a>
 					</li>
 					<li id="Profile_Management_Menu" >
-						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" title="All Customer Profiles" > 
+						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" 
+							title="All Customer Profiles" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer profiles: visitor, lead, prospect & engaged customers" > 
 							<i class="fa fa-fw fa-address-card-o"></i> Customer Profiles </a>
 					</li>
 					<li id="Segment_Management_Menu" >
-						<a id="Segment_Management" href="#calljs-leoCdpRouter('Segment_Management')" title="All Customer Segments"> 
+						<a id="Segment_Management" href="#calljs-leoCdpRouter('Segment_Management')" 
+							title="All Customer Segments" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer segments: active visitors, leads, engaged customers,..."   > 
 							<i class="fa fa-object-group" aria-hidden="true"></i> Customer Segments </a>
 					</li>
 				</ul>
@@ -111,11 +122,14 @@
 				</a>
 				<ul id="data_activation_hub_menu" class="collapse in" aria-expanded="true">
 					<li>
-						<a id="Digital_Asset_Management" href="#calljs-leoCdpRouter('Digital_Asset_Management')" title="Digital Asset Management" > 
+						<a id="Digital_Asset_Management" href="#calljs-leoCdpRouter('Digital_Asset_Management')" 
+							title="Digital Asset Management" data-container="body" data-toggle="popover" data-placement="right" 
+								data-content="Manage digital data assets: short URL links, content catalogs, product catalogs, voucher catalogs, presentation slides, feedback forms, HTML email templates, text message templates"  > 
 							<i class="fa fa-fw fa-list" ></i> Digital Data Assets </a>
 					</li>
 					<li id="Data_Service_Management_Menu" style="display: none;" data-system-user-roles="5,6" >
-						<a id="Data_Service_Management" href="#calljs-leoCdpRouter('Data_Service_Management')">
+						<a id="Data_Service_Management" href="#calljs-leoCdpRouter('Data_Service_Management')" 
+							title="Activation Services" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage activation services: data synchronization data enrichment & data personalization"  >
 							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Activation Services </a>
 					</li>
 					<li id="Activation_Rules_Menu" style="display: none" >
@@ -123,7 +137,8 @@
 							<i class="fa fa-fw fa-cogs" aria-hidden="true" ></i> Activation Rules </a>
 					</li>
 					<li id="Automated_Campaigns_Menu" >
-						<a id="Automated_Campaigns" href="#calljs-leoCdpRouter('Automated_Campaigns')">
+						<a id="Automated_Campaigns" href="#calljs-leoCdpRouter('Automated_Campaigns')" 
+							title="Automated Campaigns" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage automated campaigns for email marketing, Zalo marketing, SMS marketing, Facebook Ads,... " >
 							<i class="fa fa-fw fa-cogs" aria-hidden="true" ></i> Automated Campaigns </a>
 					</li>
 				</ul>
@@ -136,11 +151,13 @@
 				</a>
 				<ul id="system_management_menu" class="collapse in" aria-expanded="true">
 					<li>
-						<a id="User_Login_Management" href="#calljs-leoCdpRouter('User_Login_Management')">
+						<a id="User_Login_Management" href="#calljs-leoCdpRouter('User_Login_Management')"
+							title="User Login Accounts" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage system user login accounts" >
 							<i class="fa fa-user-plus" aria-hidden="true"></i> User Login Accounts </a>
 					</li>
 					<li id="System_Data_Settings_Menu" >
-						<a id="System_Data_Settings" href="#calljs-leoCdpRouter('System_Data_Settings')" >
+						<a id="System_Data_Settings" href="#calljs-leoCdpRouter('System_Data_Settings')" 
+							title="System Data Settings" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage system settings & upgrade the system" >
 							<i class="fa fa-gear" aria-hidden="true"></i> System Data Settings </a>
 					</li>
 				</ul>
@@ -149,7 +166,7 @@
 			<li >
 				<div class="panel panel-default">
 				    <div class="panel-body" style="font-size: 11px;" >
-				    	<div>
+				    	<div title="CDP Version" data-container="body" data-toggle="popover" data-placement="top" data-content="The version of CDP" >
 				    		<b> 
 				    			Version: <span id="leo_product_type" ></span>
 				    			<span id="leocdp_version_type" ></span>  
@@ -321,6 +338,9 @@
 		        	}
 		        }
 		    });
+			
+			// show main menu guide
+			initMainMenuGuide();
 		}
 	};
 </script>
