--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -291,6 +291,8 @@
 	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.router.functions.js?admin=1&_={{cacheBustingKey}}"></script>
 	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.core-admin.js?admin=1&_={{cacheBustingKey}}"></script>
 	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.visualization.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.onboarding.js?admin=1&_={{cacheBustingKey}}" ></script>
+	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.chatbot.js?admin=1&_={{cacheBustingKey}}" ></script>
 	
 	<!-- system management and event monitoring  -->
 	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.system.js?admin=1&_={{cacheBustingKey}}"></script>
@@ -316,13 +318,6 @@
 	
 	<!-- data service -->
 	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.data.service.js?admin=1&_={{cacheBustingKey}}" async="true" ></script>
-	
-	<!-- chatbot  -->
-	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.chatbot.js?admin=1&_={{cacheBustingKey}}" async="true"></script>
-	
-	<!-- show user how to use CDP  -->
-	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.onboarding.js?admin=1&_={{cacheBustingKey}}" async="true"></script>
-	
 	
 	<!-- after deps are loaded -->
 	<script type="text/javascript" >
