improve UI and system

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -550,7 +550,7 @@
 				               	</li>
 				               	
 				               	<li>
-				                   <label > <i class="fa fa-fw fa-list"></i> Reachable Media Channels </label> 
+				                   <label > <i class="fa fa-fw fa-list"></i> Media Channels </label> 
 				                   <button type="button" class="btn btn-do-now btn-xs" onclick="profileAddNewTextHashSet('mediaChannels')" title="Add new"  > 
 				    					<i class="fa fa-plus-circle" aria-hidden="true"></i> Add Media Channel
 				    			   </button>
