--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -1,5 +1,4 @@
 <!-- Data Journey Flow -->
-
 <div class="row">
     <div class="col-lg-7" >
 		<h5 class="page-header" id="page_breadcrumb" > </h5>
@@ -14,8 +13,8 @@
     	<button type="button" class="btn btn-danger data-control-delete" onclick="deleteCurrentJourneyMap()" title="Delete current journey map" > 
     		<i class="fa fa-trash" aria-hidden="true"></i> Delete 
     	</button>
-      	<button type="button" class="btn btn-goto-router data-control-edit" onclick="createNewJourneyMap()" title="Create New Journey Map"  > 
-    		<i class="fa fa-plus-circle" aria-hidden="true"></i> New Journey Map
+      	<button type="button" class="btn btn-goto-router data-control-edit" onclick="createNewJourneyMap()" title="Create New Data Journey Map"  > 
+    		<i class="fa fa-plus-circle" aria-hidden="true"></i> New Data Journey Map
     	</button>
     </div>
 </div>
@@ -26,23 +25,23 @@
 		<div class="row">
 			<div class="col-lg-4" >
 	            <div class="panel panel-info">
-            		<div class="panel-heading"> <h3 class="panel-title text-center"> <i class="fa fa-list" aria-hidden="true"></i> All Journey Maps</h3> </div>
+            		<div class="panel-heading"> <h3 class="panel-title text-center"> <i class="fa fa-list" aria-hidden="true"></i> All Data Journey Maps</h3> </div>
 				  	<div class="panel-body" style="height: 80px; padding-top: 20px; font-weight: bold;" >
 				  		<select id="journeyMapList" data-placeholder="Choose an Journey Map" class="select" >
 		                  <!-- journeyMapList -->  
 		                </select>
 		                <div id="default_journey_map_check" style="display: none; margin-top: 8px; font-weight: bold;" > 
-				  			<i style="font-size:1.2em;color:#3300ff" class="fa fa-check-square-o" aria-hidden="true"></i> Default Journey Map
+				  			<i style="font-size:1.2em;color:#3300ff" class="fa fa-check-square-o" aria-hidden="true"></i> This is default journey map
 				  		</div>
 				  	</div>
 				</div>
 			</div>
 			<div class="col-lg-8" >
 				<div class="panel panel-info">
-            		<div class="panel-heading"> <h3 class="panel-title text-center"> <i class="fa fa-info-circle" aria-hidden="true"></i> Journey Name </h3> </div>
+            		<div class="panel-heading"> <h3 class="panel-title text-center"> <i class="fa fa-info-circle" aria-hidden="true"></i> Data Journey Name </h3> </div>
 				  	<div class="panel-body" style="height: 80px" >
-				  		 <h4 class="highlight_text text-center" >
-				  		 	<a id="journeyMapName" href="javascript: editJourneyMapName()" title="Click to edit name" >&nbsp;</a>
+				  		 <h4 class="highlight_text text-center" onmouseover="this.style.border = '1px dashed'" onmouseout="this.style.border = '0px'" title="Click to edit" onclick="editJourneyMapName()">
+				  		 	<a id="journeyMapName" href="javascript: editJourneyMapName()" title="Click to edit" >&nbsp;</a>
 				  		 	<input id="journeyMapNameEditor" type="text" class="form-control"  placeholder="Enter journey map name" style="display: none" >
 				  		 </h4>
 				  	</div>
@@ -57,7 +56,7 @@
 		  		<ul class="nav nav-tabs" data-tab-content="journey_flow_tabs" > 
 			   		<li class="active" >
 		        		<a href="javascript:" data-target-tab="panel_journey_flow_design" > 
-		        			<i class="fa fa-pencil-square" aria-hidden="true"></i> Journey Map Design 
+		        			<i class="fa fa-pencil-square" aria-hidden="true"></i> All Touchpoint Hubs
 		        		</a>
 		       		</li>
 				</ul>
